# transasm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
slides/: slides.odp
transasm/: __main__.py  config.py  transform.py  types.py  utils.py
transasm/tests/func/: primes_data.py  test_primes_program.py
transasm/tests/func/primes/: Makefile  prime_x86.s  prime_x86_64.s
transasm/tests/unit/: test_transform.py  test_types.py  test_utils.py
